# sous.ai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  bootstrap.sh  nixpacks.toml  railway.json
.github/: pull_request_template.md
backend/: CLAUDE.md  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  nutrition.py  tts.py
backend/app/routes/: cookbook.py  finalize.py  recipes.py  sessions.py  tts.py  utterance.py  wake_probe.py
backend/app/schemas/: cookbook.py  finalize.py  session.py  utterance.py  wake_probe.py
backend/gemini_client/: CLAUDE.md  __init__.py  _groq.py  client.py  context.py  mcp_server.py  nutrition_tool.py  postprocess.py  router.py  schemas.py  test_utterances.py
backend/gemini_client/evals/: README.md  _lint.py  baseline_scores.json  conftest.py  test_eval.py  test_router.py  utterances.yaml
backend/gemini_client/handlers/: __init__.py  _legacy_prompt.py  base.py  freestyle.py  qa.py  recipe.py  small_talk.py
backend/gemini_client/prompts/: freestyle.txt  qa.txt  router.txt  small_talk.txt
backend/gemini_client/tests/: test_utterances.py
backend/tests/: conftest.py
backend/tests/smoke/: test_integration.py
backend/tests/unit/: test_clarification_loop.py  test_cookbook.py  test_finalize.py  test_nutrition_tool.py  test_recipes_delete.py  test_tts.py  test_utterance.py  test_utterances.py
docs/: design.md  sous-ai-roadmap.md  ui.md
mobile/: .env.example  App.tsx  CLAUDE.md  app.json  jest.config.js  metro.config.js  package-lock.json  package.json
supabase/: config.toml  seed.sql
(+66 files in other folders)
