[project]
name = "sous-chef-backend"
version = "0.1.0"
description = "Sous Chef backend — FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-genai>=1.73.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
